turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:5: error: Int does not take parameters
  for(i<-0 to colors.length()-1){
                           ^LangtonsAnt:7: error: value % is not a member of java.awt.Color
       setCouleurBrosse(colors(i+1)%colors.length);baisseBrosse();leveBrosse()
                                   ^